...
    }
    
    func configCell(with photo: Photo) -> Bool{
        
        var createStatus = false
        
        likeButton.accessibilityIdentifier = "LikeButton"
        
        let imageUrl = photo.thumbImageURL
        
        let placeholder = UIImage(named: "image_cell_placeholder")
        
        cellImage.kf.indicatorType = .activity
...
